# ENPH-353-Competition

./: .gitignore
src/2025_competition/robbie/urdf/: robbie.xacro
src/clue_detection/: CMakeLists.txt  package.xml
src/clue_detection/models/: clue_reader_local.h5  clue_reader_model_compat.keras  clue_weights.weights.h5
src/clue_detection/scripts/: clue_reader_node.py
src/clue_detection/src/clue_detection/: model_utils.py
src/my_controller/: CMakeLists.txt  package.xml  setup.py
src/my_controller/launch/: comp.launch  pid.launch  timetrials.launch
src/my_controller/models/: clue_reader_local.h5  clue_weights.npz
src/my_controller/node/: clue_reader_node.py  dirt_pid.py  dirt_vision.py  linefollow_pid.py  statemachine.py  test_pid.py  timetrials_move.py  vision_pid.py
src/my_controller/scripts/: convert_weights.py  train_model.py
src/my_controller/src/clue_detection/: model_utils.py
